exercise202/manifests/deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: todo
          persistentVolumeClaim:
            claimName: todo
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: todo-app
        image: todo-app:latest
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts: # Mount volume
        - name: todo
          mountPath: /app/files
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
      - name: todo-backend
        image: todo-backend:latest
        securityContext:
          allowPrivilegeEscalation: false
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
