exercise202/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo
            port:
              number: 2345
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo
            port:
              number: 3456
